--- a/index.html
+++ b/index.html
@@ -188,32 +188,45 @@
             } else alert("Transaction Failed: Check user or balance");
         }
 
-        // ASK AI (GEMINI 3 FLASH)
+         // ASK AI (STABLE VERSION 1.5 FLASH)
         async function openAI(event) {
             const promptStr = prompt("How can Blaze AI help you today?");
             if(!promptStr) return;
 
             const btn = event.currentTarget;
+            const originalText = btn.innerHTML;
             btn.innerText = "PROCESSING...";
             btn.disabled = true;
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${GEMINI_KEY}`, {
+                // Changing the version to 1.5-flash for maximum stability
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${GEMINI_KEY}`, {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({ contents: [{ parts: [{ text: promptStr }] }] })
                 });
+                
                 const data = await response.json();
-                const aiText = data.candidates[0].content.parts[0].text;
-                alert("Blaze AI: " + aiText);
+
+                if (data.error) {
+                    // This will tell you if your API key is invalid or if the model name is wrong
+                    alert("Google AI Error: " + data.error.message);
+                } else if (data.candidates && data.candidates[0].content.parts[0].text) {
+                    const aiText = data.candidates[0].content.parts[0].text;
+                    alert("Blaze AI: " + aiText);
+                } else {
+                    alert("AI Error: Received an empty response.");
+                }
             } catch (e) {
-                alert("AI Connection failed. Verify API Key.");
+                alert("Connection failed. Make sure your internet is on and your API Key is correct.");
+                console.error(e);
             } finally {
-                btn.innerText = "✨ ASK AI";
+                btn.innerHTML = originalText;
                 btn.disabled = false;
             }
         }
-    </script>
+</script>
 </body>
 </html>
+
 
