--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="login-screen" class="w-full max-w-md p-8 rounded-3xl bg-zinc-900 border border-zinc-800 text-center">
         <h1 class="text-5xl font-black italic blaze-orange mb-2 uppercase tracking-tighter">Blaze Bank</h1>
-        <p class="text-zinc-500 text-[10px] uppercase tracking-[0.3em] mb-8">Sabaris Terminal</p>
+        <p class="text-zinc-500 text-[10px] uppercase tracking-[0.3em] mb-8">Secure Terminal</p>
         <input id="u" type="text" placeholder="Username" class="w-full p-4 mb-4 rounded-xl outline-none">
         <input id="p" type="password" placeholder="Password" class="w-full p-4 mb-6 rounded-xl outline-none">
         <button onclick="auth()" class="w-full blaze-bg text-black font-black py-4 rounded-xl uppercase tracking-widest hover:brightness-110 transition">Enter System</button>
@@ -239,6 +239,7 @@
     </script>
 </body>
 </html>
+
 
 
 
