--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="dashboard" class="hidden w-full max-w-md">
         
         <div id="admin-panel" class="hidden p-6 mb-6 rounded-3xl border-2 border-dashed border-orange-600 bg-orange-600/10">
-            <h3 class="text-[10px] font-black text-orange-500 uppercase mb-4 tracking-[0.2em]">Sabaris Control Center</h3>
+            <h3 class="text-[10px] font-black text-orange-500 uppercase mb-4 tracking-[0.2em]">Admin Panel</h3>
             <div class="grid grid-cols-2 gap-2">
-                <button onclick="addYazos(10000)" class="py-3 bg-orange-600 text-black font-black rounded-xl text-[10px] uppercase">Inject 10k YZ</button>
+                <button onclick="addYazos(10000)" class="py-3 bg-orange-600 text-black font-black rounded-xl text-[10px] uppercase">Give 10k YZ</button>
                 <button onclick="toggleFreeze()" class="py-3 bg-zinc-800 text-white font-black rounded-xl text-[10px] uppercase">Freeze User</button>
             </div>
         </div>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="p-8 rounded-3xl bg-zinc-900 blaze-border text-center mb-6">
-            <p class="text-zinc-500 text-[10px] uppercase mb-1">Total Assets</p>
+            <p class="text-zinc-500 text-[10px] uppercase mb-1">Total Balance</p>
             <h1 class="text-6xl font-black italic mb-4"><span id="bal">0</span> <span class="text-sm blaze-orange">YZ</span></h1>
             <button onclick="openAI(event)" class="w-full bg-black border border-orange-500 text-orange-500 font-bold py-2 rounded-lg text-[10px] uppercase tracking-widest">✨ Ask Ai</button>
         </div>
@@ -65,7 +65,7 @@
 
         <div class="p-6 rounded-3xl bg-zinc-900 border border-zinc-800">
             <div class="flex justify-between items-center mb-4">
-                <h3 class="text-[10px] font-bold text-zinc-500 uppercase">Private Ledger</h3>
+                <h3 class="text-[10px] font-bold text-zinc-500 uppercase">Transaction Logs</h3>
                 <button onclick="hideAllLogs()" class="text-[9px] text-zinc-600 hover:text-orange-500 uppercase font-black">Clear All History</button>
             </div>
             <div id="feed" class="space-y-3 max-h-60 overflow-y-auto pr-2 text-xs text-zinc-500 italic">No visible activity</div>
@@ -239,6 +239,7 @@
     </script>
 </body>
 </html>
+
 
 
 
