--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             <div id="feed" class="space-y-3 max-h-60 overflow-y-auto pr-2 text-xs text-zinc-500 italic">No visible activity</div>
         </div>
     </div>
+    <div class="flex justify-between items-center mb-4">
+    <h3 class="text-[10px] font-bold text-zinc-500 uppercase">Private Ledger</h3>
+    <div class="flex gap-4">
+        <button onclick="hideAllLogs()" class="text-[9px] text-zinc-600 hover:text-orange-500 uppercase font-black">Hide All</button>
+        <button onclick="resetLogs()" class="text-[9px] text-orange-500 hover:text-white uppercase font-black">Reset Logs</button>
+    </div>
+</div>
+
 
     <script>
         const SB_URL = 'https://xctauoqsgsaphnranqix.supabase.co';
@@ -235,10 +243,29 @@
         btn.innerText = originalText; 
     }
 }
+        async function resetLogs() {
+    if(!confirm("Bring back all hidden transactions?")) return;
+    
+    // Deletes your personal 'hide' list from Supabase
+    const { error } = await sb.from('hidden_logs')
+        .delete()
+        .eq('username', user.username);
+
+    if(!error) {
+        userHiddenLogs = []; // Clear the local list
+        refresh(); // Reload the feed
+        alert("Logs Restored.");
+    } else {
+        alert("Error resetting logs.");
+    }
+}
+
+
 
     </script>
 </body>
 </html>
+
 
 
 
