--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="p-6 rounded-3xl bg-zinc-900 border border-zinc-800">
             <div class="flex justify-between items-center mb-4">
-                <h3 class="text-[10px] font-bold text-zinc-500 uppercase">Private Ledger</h3>
+                <h3 class="text-[10px] font-bold text-zinc-500 uppercase">Transaction Logs</h3>
                 <div class="flex gap-3">
                     <button onclick="hideAllLogs()" class="text-[9px] text-zinc-600 hover:text-orange-500 uppercase font-black">Hide All</button>
                     <button onclick="resetLogs()" class="text-[9px] text-orange-500 hover:text-white uppercase font-black">Reset</button>
@@ -233,6 +233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
