Update index.html 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="text-zinc-500 text-[10px] uppercase tracking-[0.3em] mb-8">Secure Terminal</p>
         <input id="u" type="text" placeholder="Username" class="w-full p-4 mb-4 rounded-xl outline-none">
         <input id="p" type="password" placeholder="Password" class="w-full p-4 mb-6 rounded-xl outline-none">
-        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-4 rounded-xl uppercase tracking-widest hover:brightness-110 transition">Enter System</button>
+        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-4 rounded-xl uppercase tracking-widest hover:brightness-110 transition">Start Banking</button>
     </div>
 
     <div id="dashboard" class="hidden w-full max-w-md">
@@ -233,6 +233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
