--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLAZE BANK | COMPACT v6.1</title>
+    <title>BLAZE BANK | Safe Terminal</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -39,7 +39,7 @@
 
     <div id="login-screen" class="max-w-sm w-full p-8 glass rounded-3xl text-center border-t-2 border-orange-600 shadow-2xl">
         <h1 class="text-3xl font-black blaze-orange mb-1 italic tracking-tighter">BLAZE BANK</h1>
-        <p class="text-[8px] text-zinc-700 mb-6 tracking-[0.4em]">SYSTEM v6.1</p>
+        <p class="text-[8px] text-zinc-700 mb-6 tracking-[0.4em]">Safe Terminal</p>
         <input id="u" type="text" placeholder="USER ID" class="w-full p-3 mb-3 rounded-xl text-white text-xs">
         <input id="p" type="password" placeholder="SECURE KEY" class="w-full p-3 mb-6 rounded-xl text-white text-xs">
         <button onclick="auth()" class="w-full blaze-bg text-black font-black py-3 rounded-xl uppercase text-xs hover:opacity-80 transition">Connect</button>
@@ -278,4 +278,5 @@
     </script>
 </body>
 </html>
+
 
