--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLAZE BANK | Safe Terminal</title>
+    <link rel="icon" href="https://api.iconify.design/lucide:flame.svg?color=%23ff5f00" type="image/svg+xml">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -96,7 +97,7 @@
 
                 <div id="content-logs" class="hidden-tab h-full flex flex-col gap-3 overflow-hidden">
                     <div class="flex justify-between items-center px-1">
-                        <span class="text-[9px] font-black text-zinc-600">SECURE LEDGER</span>
+                        <span class="text-[9px] font-black text-zinc-600">Transaction Logs</span>
                         <div class="flex gap-2">
                             <button onclick="hideAllLogs()" class="text-[8px] bg-zinc-900 px-2 py-1 rounded text-zinc-400">HIDE ALL</button>
                             <button onclick="resetLogs()" class="text-[8px] text-orange-500 underline">RESET</button>
@@ -278,5 +279,6 @@
     </script>
 </body>
 </html>
+
 
 
