--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLAZE BANK | Safe Terminal</title>
-    <link rel="icon" href="https://api.iconify.design/lucide:flame.svg?color=%23ff5f00" type="image/svg+xml">
+    <link rel="icon" href="https://api.iconify.design/pi:flame-fill.svg?color=%23ff5f00" type="image/svg+xml">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -279,6 +279,7 @@
     </script>
 </body>
 </html>
+
 
 
 
