--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLAZE BANK | Safe Terminal</title>
-    <link rel="icon" href="https://api.iconify.design/pi:flame-fill.svg?color=%23ff5f00" type="image/svg+xml">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath fill='%23ff5f00' d='M200,104a88,88,0,0,1-88,88c-48.6,0-88-39.4-88-88c0-34.7,21.7-74.1,56.5-103.1a8,8,0,0,1,11.8,9.2a64,64,0,0,0,88.4,76.5a8,8,0,0,1,10.6,9.1c-1,4.4-1.3,8.8-1.3,13.3Z'/%3E%3Cpath fill='%23ff5f00' d='M152,104a40,40,0,0,1-40,40a40,40,0,0,1-40-40c0-18,12.3-37.4,30.3-51.4a8,8,0,0,1,11.2,10a24,24,0,0,0,37.1,28.9a8,8,0,0,1,11,7.2c.3,1.8.4,3.5.4,5.3Z'/%3E%3C/svg%3E">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -279,6 +279,7 @@
     </script>
 </body>
 </html>
+
 
 
 
