--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLAZE BANK | Safe Terminal</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath fill='%23ff5f00' d='M200,104a88,88,0,0,1-88,88c-48.6,0-88-39.4-88-88c0-34.7,21.7-74.1,56.5-103.1a8,8,0,0,1,11.8,9.2a64,64,0,0,0,88.4,76.5a8,8,0,0,1,10.6,9.1c-1,4.4-1.3,8.8-1.3,13.3Z'/%3E%3Cpath fill='%23ff5f00' d='M152,104a40,40,0,0,1-40,40a40,40,0,0,1-40-40c0-18,12.3-37.4,30.3-51.4a8,8,0,0,1,11.2,10a24,24,0,0,0,37.1,28.9a8,8,0,0,1,11,7.2c.3,1.8.4,3.5.4,5.3Z'/%3E%3C/svg%3E">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23ff5f00' d='M17.55 11.2c-.23-.3-.5-.57-.76-.85c-.65-.7-1.4-1.47-1.66-2.59c-.03-.12-.12-.23-.25-.28c-.13-.05-.28-.02-.38.07c-.1.09-.56.52-.77 1.41c-.2.86-.06 1.7.59 2.63c.08.13.06.3-.05.41c-.1.11-.27.15-.41.1c-.2-.08-.45-.19-.7-.35c-.87-.56-1.54-1.5-1.78-2.5c-.03-.13-.13-.23-.26-.27c-.13-.04-.27 0-.37.09c-.1.09-.64.59-.87 1.58c-.24 1.05-.01 2.14.65 3.07c.08.12.06.28-.05.38c-.11.1-.27.12-.4.05c-.14-.07-.3-.15-.45-.25c-.96-.64-1.53-1.65-1.53-2.73c0-.14-.09-.27-.22-.32c-.13-.05-.28-.01-.37.08c-.1.1-1.01 1.02-1.24 2.59c-.29 1.98.66 4.01 2.37 5.08c.11.07.16.2.12.33c-.04.13-.16.21-.29.21H17c.18 0 .32-.15.31-.33c-.02-1.3-.39-2.57-1.07-3.68c-.07-.12-.05-.28.05-.38c.1-.1.27-.12.4-.04c.15.1.32.21.48.33c1.07.79 1.83 2 1.83 3.39c0 .13.08.24.2.29c.12.05.26.02.36-.07c.1-.09 1.14-1.12 1.31-3.15c.18-2.21-1.14-4.22-2.32-5.75z'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
@@ -279,6 +278,7 @@
     </script>
 </body>
 </html>
+
 
 
 
