--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLAZE BANK | Safe Terminal</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23ff5f00' d='M17.55 11.2c-.23-.3-.5-.57-.76-.85c-.65-.7-1.4-1.47-1.66-2.59c-.03-.12-.12-.23-.25-.28c-.13-.05-.28-.02-.38.07c-.1.09-.56.52-.77 1.41c-.2.86-.06 1.7.59 2.63c.08.13.06.3-.05.41c-.1.11-.27.15-.41.1c-.2-.08-.45-.19-.7-.35c-.87-.56-1.54-1.5-1.78-2.5c-.03-.13-.13-.23-.26-.27c-.13-.04-.27 0-.37.09c-.1.09-.64.59-.87 1.58c-.24 1.05-.01 2.14.65 3.07c.08.12.06.28-.05.38c-.11.1-.27.12-.4.05c-.14-.07-.3-.15-.45-.25c-.96-.64-1.53-1.65-1.53-2.73c0-.14-.09-.27-.22-.32c-.13-.05-.28-.01-.37.08c-.1.1-1.01 1.02-1.24 2.59c-.29 1.98.66 4.01 2.37 5.08c.11.07.16.2.12.33c-.04.13-.16.21-.29.21H17c.18 0 .32-.15.31-.33c-.02-1.3-.39-2.57-1.07-3.68c-.07-.12-.05-.28.05-.38c.1-.1.27-.12.4-.04c.15.1.32.21.48.33c1.07.79 1.83 2 1.83 3.39c0 .13.08.24.2.29c.12.05.26.02.36-.07c.1-.09 1.14-1.12 1.31-3.15c.18-2.21-1.14-4.22-2.32-5.75z'/%3E%3C/svg%3E">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23ff5f00' d='M12 2c0 0-3.5 4.5-3.5 8.5c0 2.5 1.5 4.5 3.5 5.5c-1-1.5-1-3.5 0-5.5c0.5 1.5 2.5 2.5 2.5 4.5c0 2.5-2.5 4.5-2.5 4.5c5 0 7.5-3.5 7.5-7.5c0-4.5-3.5-7-3.5-7s1.5 2.5 0 5c-1.5-3.5-4-5.5-4-7.5M8 6c0 0-1.5 2.5-1.5 5c0 3 2 5.5 4.5 6.5c-2.5-1-3.5-3.5-2.5-6c-1 1-1.5 2.5-1.5 4c0 3.5 3 6.5 6.5 6.5c-6 0-9-4-9-8.5c0-4.5 3.5-7.5 3.5-7.5'/%3E%3C/svg%3E">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
         body { background: #000; color: #eee; font-family: 'JetBrains+Mono', monospace; height: 100vh; overflow: hidden; display: flex; align-items: center; justify-content: center; margin: 0; }
@@ -278,6 +277,7 @@
     </script>
 </body>
 </html>
+
 
 
 
