--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
 
-        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-3 rounded-xl uppercase text-xs hover:opacity-90 active:scale-95 transition">Establish Link</button>
+        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-3 rounded-xl uppercase text-xs hover:opacity-90 active:scale-95 transition">Start Banking</button>
     </div>
 
     <div id="dashboard" class="glass rounded-3xl shadow-2xl overflow-hidden p-4">
@@ -113,7 +113,7 @@
                     <div class="glass p-4 rounded-2xl space-y-2">
                         <input id="target" type="text" placeholder="Recipient" class="w-full p-2.5 rounded-lg text-white text-[10px]">
                         <input id="amt" type="number" placeholder="Amount" class="w-full p-2.5 rounded-lg text-white text-[10px]">
-                        <button onclick="send()" class="w-full py-3 blaze-bg text-black font-black rounded-lg text-[10px] uppercase">Transfer Credits</button>
+                        <button onclick="send()" class="w-full py-3 blaze-bg text-black font-black rounded-lg text-[10px] uppercase">Transfer</button>
                     </div>
                 </div>
 
@@ -298,6 +298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
