--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLAZE BANK | Safe Terminal</title>
+    <title>BLAZE BANK | Admin Terminal</title>
     <link rel="icon" href="https://fav.farm/🔥">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -18,12 +18,12 @@
         .chat-container { height: 100%; overflow-y: auto; scroll-behavior: smooth; }
         .custom-scroll::-webkit-scrollbar { width: 3px; }
         .custom-scroll::-webkit-scrollbar-thumb { background: #333; }
-        .tab-btn { padding: 8px; font-size: 10px; font-weight: 900; color: #444; border-bottom: 2px solid transparent; flex: 1; transition: 0.2s; }
+        .tab-btn { padding: 8px; font-size: 10px; font-weight: 900; color: #444; border-bottom: 2px solid transparent; flex: 1; transition: 0.2s; cursor: pointer; }
         .tab-btn.active { color: #ff5f00; border-bottom: 2px solid #ff5f00; background: rgba(255,95,0,0.05); }
         .msg-bubble { padding: 6px 10px; border-radius: 10px; font-size: 10px; max-width: 85%; border: 1px solid #222; margin-bottom: 6px; position: relative; }
         .msg-me { border-right: 3px solid #ff5f00; margin-left: auto; background: #050505; }
         .msg-them { border-left: 3px solid #333; background: #111; }
-        .msg-broadcast { border: 1px solid #ff0000; background: rgba(255,0,0,0.1) !important; color: #ff4444 !important; width: 100% !important; max-width: 100% !important; text-align: center; border-radius: 4px !important; }
+        .msg-broadcast { border: 1px solid #ff0000; background: rgba(255,0,0,0.1) !important; color: #ff4444 !important; width: 100% !important; text-align: center; }
         .hidden-tab { display: none !important; }
         .frozen { opacity: 0.4; pointer-events: none; filter: grayscale(1); }
         input { background: #000 !important; border: 1px solid #222 !important; outline: none; transition: border 0.3s; color: white; }
@@ -39,7 +39,7 @@
 
     <div id="login-screen" class="max-w-sm w-full p-8 glass rounded-3xl text-center border-t-2 border-orange-600 shadow-2xl">
         <i data-lucide="flame" class="blaze-orange flicker w-10 h-10 mx-auto mb-2"></i>
-        <h1 class="text-3xl font-black blaze-orange mb-6 italic tracking-tighter">BLAZE BANK</h1>
+        <h1 class="text-3xl font-black blaze-orange mb-6 italic tracking-tighter uppercase">Blaze Bank</h1>
         <input id="u" type="text" placeholder="USER ID" class="w-full p-3 mb-3 rounded-xl text-xs">
         <div class="relative mb-6">
             <input id="p" type="password" placeholder="SECURE KEY" class="w-full p-3 rounded-xl text-xs">
@@ -47,17 +47,17 @@
                 <i data-lucide="eye" id="eye-icon" class="w-4 h-4"></i>
             </div>
         </div>
-        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-3 rounded-xl uppercase text-xs">Start Banking</button>
+        <button onclick="auth()" class="w-full blaze-bg text-black font-black py-3 rounded-xl uppercase text-xs">Access Terminal</button>
     </div>
 
     <div id="dashboard" class="glass rounded-3xl shadow-2xl p-4">
-        <div class="flex justify-between items-center mb-4">
+        <div class="flex justify-between items-center mb-4 px-1">
             <div class="flex items-center gap-2">
                 <i data-lucide="flame" class="blaze-orange w-3 h-3 flicker"></i>
                 <span id="user-display" class="text-[10px] font-black blaze-orange uppercase"></span>
-                <span id="admin-badge" class="hidden text-[7px] bg-red-600 text-white px-1.5 py-0.5 rounded font-bold">ROOT</span>
+                <span id="admin-badge" class="hidden text-[7px] bg-red-600 text-white px-1.5 py-0.5 rounded font-bold uppercase">Admin</span>
             </div>
-            <button onclick="location.reload()" class="text-[8px] text-zinc-600 uppercase">Logout</button>
+            <button onclick="location.reload()" class="text-[8px] text-zinc-600 uppercase font-bold hover:text-white">Exit</button>
         </div>
 
         <div class="flex border-b border-zinc-900 mb-4">
@@ -71,13 +71,13 @@
             <div class="flex-1 flex flex-col overflow-hidden">
                 <div id="content-bank" class="h-full space-y-4">
                     <div class="glass p-6 rounded-2xl text-center">
-                        <p class="text-[8px] text-zinc-600 uppercase">Balance</p>
+                        <p class="text-[8px] text-zinc-600 uppercase">Available Credits</p>
                         <div class="text-4xl font-black italic"><span id="bal">0</span><span class="text-xs blaze-orange ml-1">YZ</span></div>
                     </div>
                     <div class="glass p-4 rounded-2xl space-y-2">
-                        <input id="target" type="text" placeholder="Recipient" class="w-full p-2 text-[10px] rounded-lg">
+                        <input id="target" type="text" placeholder="Recipient ID" class="w-full p-2 text-[10px] rounded-lg">
                         <input id="amt" type="number" placeholder="Amount" class="w-full p-2 text-[10px] rounded-lg">
-                        <button onclick="send()" class="w-full py-3 blaze-bg text-black font-black rounded-lg text-[10px]">TRANSFER</button>
+                        <button onclick="send()" class="w-full py-3 blaze-bg text-black font-black rounded-lg text-[10px]">EXECUTE TRANSFER</button>
                     </div>
                 </div>
 
@@ -87,12 +87,12 @@
                             <button id="mode-global" onclick="setChatMode('global')" class="px-3 py-1 text-[8px] rounded bg-orange-500 text-black font-bold">GLOBAL</button>
                             <button id="mode-private" onclick="setChatMode('private')" class="px-3 py-1 text-[8px] rounded text-zinc-500 font-bold">PRIVATE</button>
                         </div>
-                        <button onclick="resetChatLogs()" class="text-[8px] text-zinc-500 hover:text-white uppercase px-2">Reset Comms</button>
+                        <button onclick="resetChatLogs()" class="text-[8px] text-zinc-500 hover:text-white uppercase px-2 font-bold">Reset Local Comms</button>
                     </div>
                     <div id="chat-box" class="chat-container custom-scroll p-3 flex-1"></div>
                     <div class="p-3 border-t border-zinc-900 flex flex-col gap-2">
                         <div id="broadcast-ui" class="hidden flex gap-2">
-                            <input id="broadcast-input" type="text" placeholder="SYSTEM ALERT..." class="flex-1 p-2 text-[10px] rounded-lg border-red-600/30 text-red-500">
+                            <input id="broadcast-input" type="text" placeholder="ADMIN BROADCAST..." class="flex-1 p-2 text-[10px] rounded-lg border-red-900/40 text-red-500 font-bold">
                             <button onclick="handleBroadcast()" class="px-4 bg-red-600 text-white font-black text-[10px] rounded-lg">FLASH</button>
                         </div>
                         <div class="flex gap-2">
@@ -104,14 +104,14 @@
 
                 <div id="content-logs" class="hidden-tab h-full flex flex-col gap-2 overflow-hidden">
                     <div class="flex justify-between px-1 bg-zinc-950/50 p-2 rounded-t-lg border-b border-zinc-900">
-                        <button onclick="hideAllLogs()" class="text-[8px] bg-zinc-900 px-3 py-1.5 rounded text-zinc-400 font-bold hover:text-white transition">HIDE ALL VISIBLE</button>
-                        <button onclick="resetLogs()" class="text-[8px] text-orange-500 underline font-bold px-3">RESTORE LOGS</button>
+                        <button onclick="hideAllLogsNow()" class="text-[8px] bg-zinc-900 px-3 py-1.5 rounded text-zinc-400 font-bold hover:text-white transition">HIDE ALL LOGS</button>
+                        <button onclick="resetLogs()" class="text-[8px] text-orange-500 underline font-bold px-3">RESTORE ALL</button>
                     </div>
                     <div id="feed" class="flex-1 overflow-y-auto custom-scroll space-y-2 p-1"></div>
                 </div>
 
                 <div id="content-admin" class="hidden-tab h-full flex flex-col gap-3 overflow-hidden">
-                    <div class="glass p-3 rounded-xl border-red-900/50 bg-red-950/5 text-[9px] font-bold text-red-500 uppercase">Root Control Node</div>
+                    <div class="glass p-3 rounded-xl border-red-900/50 bg-red-950/5 text-[9px] font-bold text-red-500 uppercase">Admin Access Terminal</div>
                     <div id="admin-user-list" class="flex-1 overflow-y-auto custom-scroll space-y-2"></div>
                 </div>
             </div>
@@ -132,6 +132,7 @@
         let user = null, currentChatMode = 'global', privateTarget = '';
         let hiddenMessages = JSON.parse(localStorage.getItem('blaze_h_m') || '[]');
         let hiddenBankLogs = JSON.parse(localStorage.getItem('blaze_h_l') || '[]');
+        let currentTxData = [];
 
         function togglePass() {
             const p = document.getElementById('p'), i = document.getElementById('eye-icon');
@@ -143,7 +144,7 @@
         async function auth() {
             const u = document.getElementById('u').value.trim(), p = document.getElementById('p').value;
             const { data: acc } = await sb.from('profiles').select('*').eq('username', u).single();
-            if (acc && acc.password === p) start(acc); else alert("REJECTED");
+            if (acc && acc.password === p) start(acc); else alert("ACCESS DENIED");
         }
 
         function start(acc) {
@@ -182,10 +183,11 @@
             }).join('');
 
             const { data: txs } = await sb.from('transactions').select('*').order('created_at', { ascending: true });
+            currentTxData = txs; // Store for Hide All logic
             
+            // CHAT
             const chatBox = document.getElementById('chat-box');
             let chatF = (currentChatMode === 'global') ? txs.filter(t => t.amount === 0 && t.receiver === 'GLOBAL_CHAT') : txs.filter(t => t.amount === 0 && ((t.sender === user.username && t.receiver === privateTarget) || (t.sender === privateTarget && t.receiver === user.username)));
-            
             chatBox.innerHTML = chatF.filter(m => !hiddenMessages.includes(m.id)).map(m => {
                 const isBroadcast = m.note.startsWith('[BROADCAST]');
                 return `<div class="msg-bubble ${isBroadcast ? 'msg-broadcast' : (m.sender === user.username ? 'msg-me' : 'msg-them')} group">
@@ -196,20 +198,22 @@
                     </div>
                 </div>`}).join('');
 
+            // LOGS
             const myLogs = txs.filter(t => t.amount > 0 && (t.sender === user.username || t.receiver === user.username) && !hiddenBankLogs.includes(t.id)).reverse();
             document.getElementById('feed').innerHTML = myLogs.map(t => `
-                <div class="p-2 bg-zinc-950 border border-zinc-900 flex justify-between rounded-lg items-center text-[9px] data-log-id="${t.id}">
+                <div class="p-2 bg-zinc-950 border border-zinc-900 flex justify-between rounded-lg items-center text-[9px]">
                     <span><b class="${t.sender === user.username ? 'text-red-500' : 'text-green-500'}">${t.sender === user.username ? '-' : '+'}${t.amount} YZ</b>
                     <span class="text-zinc-600 ml-2">${t.sender === user.username ? '→ ' + t.receiver : '← ' + t.sender}</span></span>
                     <button onclick="hideSingleLog(${t.id})" class="text-zinc-700 hover:text-white font-black px-2 text-[10px]">X</button>
                 </div>`).join('');
 
+            // ADMIN
             if(user.username === 'Sabaris') {
                 document.getElementById('admin-user-list').innerHTML = allUsers.map(u => `
                     <div class="p-2 glass rounded-lg border border-zinc-900 flex justify-between items-center ${u.is_frozen ? 'bg-red-950/20' : ''}">
                         <div class="text-[9px]"><b>${u.username}</b><br><span class="text-zinc-500">${u.balance} YZ</span></div>
                         <div class="flex gap-1">
-                            <button onclick="adminAction('${u.username}', 'grant')" class="bg-green-600 text-white text-[7px] px-1.5 py-0.5 rounded">+10K</button>
+                            <button onclick="adminAction('${u.username}', 'grant')" class="bg-green-600 text-white text-[7px] px-1.5 py-0.5 rounded font-bold">+10K</button>
                             <button onclick="adminAction('${u.username}', 'freeze')" class="bg-red-600 text-white text-[7px] px-1.5 py-0.5 rounded font-bold">${u.is_frozen ? 'UNLOCK' : 'FREEZE'}</button>
                             <button onclick="adminAction('${u.username}', 'zero')" class="bg-zinc-700 text-white text-[7px] px-1.5 py-0.5 rounded">ZERO</button>
                         </div>
@@ -227,7 +231,7 @@
                 await sb.from('profiles').update({ balance: them.balance + a }).eq('username', t);
                 await sb.from('transactions').insert([{ sender: user.username, receiver: t, amount: a, note: "Transfer" }]);
                 document.getElementById('amt').value = ""; refresh();
-            } else { alert("ERROR"); }
+            }
         }
 
         async function handleSendMessage() {
@@ -240,7 +244,7 @@
         async function handleBroadcast() {
             const inp = document.getElementById('broadcast-input');
             if(!inp.value.trim()) return;
-            await sb.from('transactions').insert([{ sender: 'ROOT', receiver: 'GLOBAL_CHAT', amount: 0, note: '[BROADCAST] ' + inp.value.trim() }]);
+            await sb.from('transactions').insert([{ sender: 'ADMIN', receiver: 'GLOBAL_CHAT', amount: 0, note: '[BROADCAST] ' + inp.value.trim() }]);
             inp.value = ""; refresh();
         }
 
@@ -252,34 +256,30 @@
             refresh();
         }
 
-        function setChatMode(m) { 
-            currentChatMode = m; refresh(); 
-        }
-
+        function setChatMode(m) { currentChatMode = m; refresh(); }
         function clickUser(n) { if(n !== user.username) { document.getElementById('target').value = n; setChatMode('private'); privateTarget = n; switchTab('comms'); } }
 
-        // --- THE LOG FIXES ---
-        function hideSingleLog(id) { 
-            hiddenBankLogs.push(id); 
-            localStorage.setItem('blaze_h_l', JSON.stringify(hiddenBankLogs)); 
-            refresh(); 
+        // --- FIXED LOG ACTIONS ---
+        function hideSingleLog(id) {
+            hiddenBankLogs.push(id);
+            localStorage.setItem('blaze_h_l', JSON.stringify(hiddenBankLogs));
+            refresh();
         }
 
-        function hideAllLogs() { 
-            // Select all log elements currently being shown
-            const logs = document.querySelectorAll('[data-log-id]');
-            logs.forEach(log => {
-                const id = parseInt(log.getAttribute('data-log-id'));
-                if (!hiddenBankLogs.includes(id)) hiddenBankLogs.push(id);
+        function hideAllLogsNow() {
+            // Get all visible transaction IDs from the current data
+            const visibleLogs = currentTxData.filter(t => t.amount > 0 && (t.sender === user.username || t.receiver === user.username));
+            visibleLogs.forEach(t => {
+                if (!hiddenBankLogs.includes(t.id)) hiddenBankLogs.push(t.id);
             });
             localStorage.setItem('blaze_h_l', JSON.stringify(hiddenBankLogs));
             refresh();
         }
 
-        function resetLogs() { 
-            hiddenBankLogs = []; 
-            localStorage.setItem('blaze_h_l', '[]'); 
-            refresh(); 
+        function resetLogs() {
+            hiddenBankLogs = [];
+            localStorage.setItem('blaze_h_l', '[]');
+            refresh();
         }
 
         async function deleteMsg(id, mode) {
@@ -292,5 +292,4 @@
     </script>
 </body>
 </html>
-
 
