--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLAZE BANK | Admin Terminal</title>
+    <title>BLAZE BANK | Secure Terminal</title>
     <link rel="icon" href="https://fav.farm/🔥">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -292,5 +292,6 @@
     </script>
 </body>
 </html>
+
 
 
